# Dekanat

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.frontend  build_frontend.sh  conftest.py  deploy.py  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml  rxconfig.py  seed.py  update.py
Dekanat/: Dekanat.py  actions.py  models.py  routes.py
Dekanat/audit/: __init__.py  admission_campaign.py  app_setting.py  base.py  dictionaries.py  engine.py  entrant.py  entrant_exam.py  entrants_group.py  registry.py  reports.py  role.py  worker.py
Dekanat/dao/: action.py  admission_campaign.py  admission_campaign_report.py  admission_campaign_speciality.py  app_setting.py  app_update.py  application_status.py  audit.py  auth_token.py  department.py  entrant.py  entrant_application.py  entrant_exam.py  entrants_group.py  entry_base.py  form_of_study.py  identity_document_type.py  identiy_document_type.py  item_zno.py  kinship.py  rating.py  result_zno.py  role.py  source_of_funding.py  special_condition.py  speciality.py  worker.py
Dekanat/declared/: submenu.py  updates.py
Dekanat/feedback/: __init__.py  base.py  service.py  telegram.py
Dekanat/reports/: __init__.py  base.py  engine.py  entrant_exam.py  rating.py  registration_journal.py  xlsx_reports.py
Dekanat/services/: action.py  admission_campaign.py  admission_campaign_report.py  admission_campaign_speciality.py  app_setting.py  audit.py  (+21 more)
frontend_dist/: 404.html  __spa-fallback.html  dashboard.html  index.html  login.html  sitemap.xml
tests/: test_audit.py  test_special_condition_person.py
(+6716 files in other folders)
