[project]
name = "dekanat"
version = "0.8.1"
description = ""
readme = "README.md"
requires-python = ">=3.13.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "docxtpl>=0.20.2",
    "pymysql[rsa]>=1.2.0",
    "reflex==0.8.28.post1",
    "tzdata>=2025.1",
    "xlsxtpl>=0.3.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.1.1",
    "python-lsp-server[all]>=1.14.0",
]
